samples/_failures_safe/1761530603_288aab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_355f232e.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_355f232e.c:133:9: error: expected ‘,’ or ‘;’ at end of input
  133 |         for (int i = 1
      |         ^~~
./samples/SAFE/__tmp_355f232e.c:133:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_355f232e.c:133:9: error: expected declaration or statement at end of input
